fix(header): use higher z-index

--- a/assets/properties-panel.css
+++ b/assets/properties-panel.css
@@ -176,7 +176,7 @@
   background-color: var(--header-background-color);
   border-bottom: 1px solid var(--header-bottom-border-color);
   width: 100%;
-  z-index: 1;
+  z-index: 10;
   max-height: 64px;
   overflow: hidden;
 }
@@ -249,7 +249,7 @@
   position: -webkit-sticky;  /* for safari */
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .bio-properties-panel-group-header .bio-properties-panel-group-header-title {
